fix: hide footer on blog post page to prevent TOC overlap

--- a/src/style.css
+++ b/src/style.css
@@ -357,7 +357,7 @@ body {
 .blog-post-layout {
   height: calc(100vh - 4rem);
   overflow: hidden;
-  margin: -4rem -2.5rem 0;
+  margin: 0 -2.5rem;
 }
 
 .blog-post-flex {
